[gd_scene load_steps=14 format=2]

[ext_resource path="res://gameworld/gameworld.gd" type="Script" id=1]
[ext_resource path="res://tileset.tres" type="TileSet" id=2]
[ext_resource path="res://enemies/enemy_manager.tscn" type="PackedScene" id=3]
[ext_resource path="res://finish.tscn" type="PackedScene" id=4]
[ext_resource path="res://gameworld/item_pickup.tscn" type="PackedScene" id=5]
[ext_resource path="res://items/weapons/dagger.tres" type="Resource" id=6]
[ext_resource path="res://ui/hud/hud.tscn" type="PackedScene" id=7]
[ext_resource path="res://items/weapons/pistol.tres" type="Resource" id=8]
[ext_resource path="res://small_chest.png" type="Texture" id=9]
[ext_resource path="res://suit.png" type="Texture" id=10]
[ext_resource path="res://gameworld/new_flow_field.gd" type="Script" id=11]

[sub_resource type="Animation" id=1]
length = 0.001

[sub_resource type="Animation" id=2]
resource_name = "transition"
length = 0.4

[node name="GameWorld" type="Node2D"]
script = ExtResource( 1 )

[node name="Interactables" type="Node" parent="."]

[node name="Finish" parent="Interactables" instance=ExtResource( 4 )]

[node name="Players" type="Node" parent="."]

[node name="Warriors" type="Node" parent="."]

[node name="GameMasters" type="Node" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="EnemyManager" parent="." instance=ExtResource( 3 )]

[node name="Items" type="Node" parent="."]

[node name="ItemPickup" parent="Items" instance=ExtResource( 5 )]
position = Vector2( -48, 0 )
item = ExtResource( 6 )

[node name="ItemPickup2" parent="Items" instance=ExtResource( 5 )]
position = Vector2( -24, 24 )
item = ExtResource( 8 )

[node name="ItemPickup3" parent="Items" instance=ExtResource( 5 )]
position = Vector2( -32, -32 )
item = ExtResource( 6 )

[node name="ItemPickup4" parent="Items" instance=ExtResource( 5 )]
position = Vector2( -24, -64 )
item = ExtResource( 6 )

[node name="ItemPickup5" parent="Items" instance=ExtResource( 5 )]
position = Vector2( 8, -48 )
item = ExtResource( 6 )

[node name="ItemPickup6" parent="Items" instance=ExtResource( 5 )]
position = Vector2( 8, -48 )
item = ExtResource( 6 )

[node name="ItemPickup7" parent="Items" instance=ExtResource( 5 )]
position = Vector2( 8, -48 )
item = ExtResource( 6 )

[node name="ItemPickup8" parent="Items" instance=ExtResource( 5 )]
position = Vector2( 8, -48 )
item = ExtResource( 6 )

[node name="ItemPickup9" parent="Items" instance=ExtResource( 5 )]
position = Vector2( 8, -48 )
item = ExtResource( 6 )

[node name="ItemPickup10" parent="Items" instance=ExtResource( 5 )]
position = Vector2( 8, -48 )
item = ExtResource( 6 )

[node name="HUD" parent="." instance=ExtResource( 7 )]

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="TileMap" type="TileMap" parent="Navigation2D"]
z_index = -1033
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="FlowField" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/transition = SubResource( 2 )

[node name="IncrementTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 9 )

[node name="Suit" type="Sprite" parent="."]
position = Vector2( 40, -24 )
texture = ExtResource( 10 )

[connection signal="body_entered" from="Interactables/Finish" to="." method="_on_Finish_body_entered"]
[connection signal="timeout" from="IncrementTimer" to="." method="_on_IncrementTimer_timeout"]
